fix iframe anchors, tweak css to be more legible

--- a/public/github-md.css
+++ b/public/github-md.css
@@ -22,7 +22,7 @@
 
 .markdown-body .pl-c1,
 .markdown-body .pl-s .pl-v {
-  color: #005cc5;
+  color: #489dff;
 }
 
 .markdown-body .pl-e,
@@ -89,7 +89,7 @@
 .markdown-body .pl-mh .pl-en,
 .markdown-body .pl-ms {
   font-weight: bold;
-  color: #005cc5;
+  color: #489dff;
 }
 
 .markdown-body .pl-mi {
@@ -245,6 +245,7 @@
 .markdown-body table {
   border-spacing: 0;
   border-collapse: collapse;
+  display: table !important;
 }
 
 .markdown-body td,
@@ -613,6 +614,7 @@
 
 .markdown-body pre {
   word-wrap: normal;
+  color: lightskyblue !important;
 }
 
 .markdown-body pre > code {
